--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "python-decouple>=3.8",
     "boto3>=1.35.90",
     "django-extensions>=3.2.3",
+    "yt-dlp>=2024.12.23",
 ]
