--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -23,5 +23,7 @@ dependencies = [
 dev = [
     "ptpython>=3.0.29",
     "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
     "pytest-django>=4.9.0",
+    "pytest-mock>=3.14.0",
 ]
